Add a note to QNetworkInterface about the interface types on Android

The recent versions of Android are blocking native calls (including
RTM_GETLINK requests and ioctl calls). This made the netlink based
qnetworkinterface_linux.cpp unusable, so the Android implementation
was reverted back to qnetworkinterface_unix.cpp which uses getifaddr()
to get the necessary information (see QTBUG-86394).

Unfortunately this approach does not provide the same amount of
information (note that getifaddr() is also somewhat handicapped on
Android) and as such qnetworkinterface_unix.cpp does not even try
to set the interface type, which is set to be unknown during
initialization and it remains unknown on Android.

Using the JNI/Connectivity Manager could be an option to get the
missing information, but Android provides information only about the
enabled interfaces/active networks, so those cannot be used to
provide a reliable implementation for
QNetworkInterface::allInterfaces().

The current documentation of QNetworkInterface already acknowledges
that not all operating system support reporting all features. Add a
note that warns the user about the behavior of QNetworkInterface on
Android.

Task-number: QTBUG-96974
Change-Id: Id99f106dd86f6abdf9a3a0f393b649c35663a64d
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>
Reviewed-by: Mårten Nordheim <marten.nordheim@qt.io>
(cherry picked from commit 76b8af33abcc61c7a0fda6a3e71d50fc10a0e212)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>